[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Icons/blue_boxTick.png" type="Texture" id=1]
[ext_resource path="res://Font/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/ItemIndividual.gd" type="Script" id=3]
[ext_resource path="res://Font/Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Font/RobotoCondensed-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=6]
TooltipLabel/fonts/TooltipFont = SubResource( 5 )

[node name="ItemIndividual" type="Panel"]
pause_mode = 2
margin_right = 400.0
margin_bottom = 40.0
rect_min_size = Vector2( 440, 40 )
size_flags_horizontal = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 440.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIconContainer" type="PanelContainer" parent="HBoxContainer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 20 )

[node name="ItemIcon" type="Sprite" parent="HBoxContainer/ItemIconContainer"]
position = Vector2( 20, 20 )
texture = ExtResource( 1 )

[node name="VSep" type="VSeparator" parent="HBoxContainer"]
margin_right = 4.0
margin_bottom = 40.0

[node name="ItemName" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 8.0
margin_right = 195.0
margin_bottom = 40.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Item Name"
meta_underlined = false
text = "Item Name"
scroll_active = false

[node name="VSep2" type="VSeparator" parent="HBoxContainer"]
margin_left = 199.0
margin_right = 203.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemValue" type="RichTextLabel" parent="HBoxContainer"]
margin_left = 207.0
margin_right = 315.0
margin_bottom = 40.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
bbcode_enabled = true
bbcode_text = "Val"
text = "Val"

[node name="AdjustButtons" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 319.0
margin_right = 440.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45

[node name="SubtractButton" type="Button" parent="HBoxContainer/AdjustButtons"]
margin_right = 35.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = " - "

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/AdjustButtons"]
margin_left = 39.0
margin_right = 43.0
margin_bottom = 40.0

[node name="AddButton" type="Button" parent="HBoxContainer/AdjustButtons"]
margin_left = 47.0
margin_right = 84.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 4 )
text = " + "

[node name="TimerButtons" type="HBoxContainer" parent="HBoxContainer"]
visible = false
margin_left = 318.0
margin_right = 439.0
margin_bottom = 40.0

[node name="StartStopButton" type="Button" parent="HBoxContainer/TimerButtons"]
margin_right = 51.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 5 )
text = "Start"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/TimerButtons"]
margin_left = 55.0
margin_right = 59.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ClearButton" type="Button" parent="HBoxContainer/TimerButtons"]
margin_left = 63.0
margin_right = 121.0
margin_bottom = 40.0
theme = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
action_mode = 0
text = "Reset"

[node name="ItemIndividual" type="Node2D" parent="."]
[connection signal="pressed" from="HBoxContainer/AdjustButtons/SubtractButton" to="." method="_on_SubtractButton_pressed"]
[connection signal="pressed" from="HBoxContainer/AdjustButtons/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="HBoxContainer/TimerButtons/StartStopButton" to="." method="_on_StartStopButton_pressed"]
